--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,27 +1,22 @@
-body {
+body 
+  {
     color: white;
     padding: 40px;
     font-family: Sans-Serif;
     text-align: center;
     background-color: gray
-
   }
 
-  .div-wrapper{
+  .div-wrapper
+  {
     margin: 20px;
     background-color: #282c34;
     height: 100vh;
 
   }
 
-.theBluetext {
-  color: DodgerBlue;
-  padding: 40px;
-  font-family: Sans-Serif;
-  text-align: center;
-}
-
-.myroute{
+ .myroute
+ {
   padding-left: 10px;
   padding-right: 10px;
   border: solid 2px red;
@@ -30,30 +25,23 @@ body {
   margin: 10px;
   text-align: center;
  }
- .menu{
+ .menu
+ {
   border: solid gray 1px;
   padding: 20px;
   
  }
 
- .myform{
+ .myform
+ {
   text-align: left;
   padding-left: 500px;
  }
 
-label {
+ label 
+ {
   display: inline-block;
   width: 150px;
   text-align: left;
-  margin-top: 10px;
-  
-}
-
-textarea{
-  height: 100px;
-  width: 350px;
-}
-
-li{
-  list-style-type: none;
-}
+  margin-top: 10px; 
+ }
