--- a/src/css/App.css
+++ b/src/css/App.css
@@ -14,8 +14,8 @@ body
   {
     background-color: #282c34;
     height: 130vh;
-
   }
+
   .Top_Nav{
     display: grid;
     grid-template-columns: 200px 400px 200px;
@@ -27,6 +27,7 @@ body
     height: 40px;
     padding-top: 20px;
   }
+
   #Search_Bar{
     width: 400px;
     height: 30px;
@@ -34,6 +35,7 @@ body
     border: none;
     margin-left: 10px;
   }
+
   .Search_Div{
     display: flex;
   }
@@ -42,10 +44,12 @@ body
     display: grid;
     grid-template-columns: 100px 100px 100px;
   }
+
   .League_Route{
     color: white;
     text-decoration: none;
   }
+
   .Account_Route{
     text-decoration: none;
     color: white;
@@ -60,12 +64,14 @@ body
     padding-top: 10px;
     padding-bottom: 10px;
   }
+
   #Home_Header{
     text-decoration: none;
     color: white;
     font-size: 60px;
     font-weight: 700;
   }
+
   .SignIn{
     background-color: #282c34;
     text-decoration: none;
@@ -109,9 +115,6 @@ body
 
 
 
-
-
-
 #NFLTitle{
   text-align: left;
   margin-left: 10%;
@@ -140,23 +143,9 @@ body
   justify-content:space-evenly;
 }
 
-
 #NFLSpaceingz{
   margin-left: 10%;
 }
-
-
-#HomePageRight{
-  border-style: solid;
-}
-
-
-
-
-
-
-
-
 
 
 
@@ -206,12 +195,6 @@ margin-right: 25%;
 #AccountPageForms{
 margin-left: 2%;
 }
-
-#AccountInfoInput{
-  
-}
-
-
 
 
 
@@ -434,5 +417,94 @@ th{
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
+}
+
+.toTeam{
+  font-size: medium;
+  font-weight: bold;
+}
+.toTeam:visited{
+  color: white;
+}
+.toTeam:hover{
+  color: red;
+}
+
+.toPlayer{
+  font-size: medium;
+  font-weight: bold;
+}
+.toPlayer:visited{
+  color: white;
+}
+.toPlayer:hover{
+  color: red;
+}
+
+.League_Route:hover{
+  color:red;
+}
+
+.League_Links:hover{
+  color: red;
+}
+
+
+
+
+#Inlayed
+{
+  display: grid;
+  grid-template-columns: 400px 600px;
+  margin-left: 25%;
+  text-align: center;
+}
+
+#HomePageRight{
+  width: 36em;
+  height: 29.6em;
+  display: flex;
+  flex-direction: row;
+}
+
+#News-Artical{
+  width: 16em;
+  height: 16em;
+  margin: 1em;
+}
+
+#News-Artical-Bottom{
+  width: 16em;
+  height: 16em;
+  margin: 1em;
+  margin-top: -2em;
+}
+
+#Artical-Title{
+ margin-top: -0.01em;
+ text-decoration: underline;
+}
+
+#Artical-Image{
+  width: 16em;
+  height: 10em;
+  background-color: gray;
+}
+
+#New-Tag-Box{
+  margin-top: -1em;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+}
+
+#New-Tag{
+  font-size: 0.6em;
+  margin-left: 0.5em;
+}
+
+#select-my-team{
+  display: flex;
+  flex-direction: row;
 }
 
