--- a/src/css/App.css
+++ b/src/css/App.css
@@ -455,10 +455,16 @@ th{
 #Inlayed
 {
   display: grid;
-  grid-template-columns: 400px 600px;
-  margin-left: 25%;
+  grid-template-columns: 600px 600px;
+  margin-left: 15%;
   text-align: center;
 }
+#HomeLeft-Tag{
+  font-size: 0.6em;
+  margin-left: 0.5em;
+}
+
+
 
 #HomePageRight{
   width: 36em;
